<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/displayHint"
        android:textColorHint="@color/greyAccent"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/equalsButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equals_button_background"
            android:onClick="equalsBtnPush"
            android:text="@string/equals_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/DecimalButton"
            app:layout_constraintTop_toBottomOf="@+id/additionButton" />

        <Button
            android:id="@+id/DecimalButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="decimalBtnPush"
            android:text="@string/decimal_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/zeroButton"
            app:layout_constraintTop_toBottomOf="@+id/threeButton" />

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBtnPush"
            android:text="@string/zero_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/twoButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/oneButton"
            app:layout_constraintTop_toBottomOf="@+id/oneButton" />

        <Button
            android:id="@+id/additionButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="additionBtnPush"
            android:text="@string/addition_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/threeButton"
            app:layout_constraintTop_toBottomOf="@+id/subtractionButton" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBtnPush"
            android:text="@string/three_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/twoButton"
            app:layout_constraintTop_toBottomOf="@+id/sixButton" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBtnPush"
            android:text="@string/two_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

        <Button
            android:id="@+id/oneButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneBtnPush"
            android:text="@string/one_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourButton" />

        <Button
            android:id="@+id/subtractionButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="subtractionBtnPush"
            android:text="@string/subtraction_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/sixButton"
            app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBtnPush"
            android:text="@string/six_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/fiveButton"
            app:layout_constraintTop_toBottomOf="@+id/nineButton" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBtnPush"
            android:text="@string/five_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/fourButton"
            app:layout_constraintTop_toBottomOf="@+id/eightButton" />

        <Button
            android:id="@+id/fourButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourBtnPush"
            android:text="@string/four_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

        <Button
            android:id="@+id/multiplicationButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="multiplicationBtnPush"
            android:text="@string/multiplication_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/nineButton"
            app:layout_constraintTop_toBottomOf="@+id/divisionButton" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBtnPush"
            android:text="@string/nine_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/eightButton"
            app:layout_constraintTop_toBottomOf="@+id/rightBracketButton" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBtnPush"
            android:text="@string/eight_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/sevenButton"
            app:layout_constraintTop_toBottomOf="@+id/leftBracketButton" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBtnPush"
            android:text="@string/seven_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clearButton" />

        <Button
            android:id="@+id/divisionButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="divisionBtnPush"
            android:text="@string/division_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/rightBracketButton"
            app:layout_constraintTop_toBottomOf="@+id/backspace_Button" />

        <Button
            android:id="@+id/rightBracketButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="rightBracketBtnPush"
            android:text="@string/rightBracket_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/leftBracketButton"
            app:layout_constraintTop_toBottomOf="@+id/backspace_Button" />

        <Button
            android:id="@+id/leftBracketButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="leftBracketBtnPush"
            android:text="@string/leftBracket_text"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/clearButton"
            app:layout_constraintTop_toBottomOf="@+id/backspace_Button" />

        <Button
            android:id="@+id/backspace_Button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="backSpaceBtnPush"
            android:text="@string/backSpace"
            android:textColor="@color/tanAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/divisionButton"
            app:layout_constraintStart_toStartOf="@+id/divisionButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:onClick="clearBtnPush"
            android:text="@string/clearText"
            android:textColor="#F57F17"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backspace_Button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>